--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Server Configuration
 PORT=3000
 
+# Nexus Configuration
+NEXUS_PORT=8080
+
 # Database Configuration
 DB_HOST=localhost
 DB_PORT=3306
