--- a/package.json
+++ b/package.json
@@ -24,9 +24,14 @@
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
+    "@atproto/common": "latest",
+    "@atproto/syntax": "latest",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "typed-emitter": "^2.1.0",
+    "ws": "^8.12.0",
+    "zod": "^4.1.12"
   }
 }
