--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,5 @@ NEXUS_PORT=8080
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=your_password_here
-DB_NAME=myapp
+DB_PASSWORD=password
+DB_NAME=dbbench
