--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "kysely": "^0.27.3",
+    "measured-core": "^2.0.0",
     "mysql2": "^3.6.5"
   },
   "devDependencies": {
